--- a/paper-please/templates/index.html
+++ b/paper-please/templates/index.html
@@ -1,61 +1,101 @@
 <!DOCTYPE html>
-<html lang="ko">
-    <head>
-        <meta charset="UTF-8"/>
+<html lang="en">
 
-        <!-- 반응형으로 동작 -->
-        <meta title="viewport" content="width=device-width, initial-scale=1.0"/>
+<head>
 
-        <!-- Bootstrap -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        
-        <!-- jQuery latest version import -->
-        <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+    <meta charset="UTF-8" />
 
-        <!-- JS -->
-        <script src="{{ url_for('static', filename='script.js')}}" type="text/javascript"></script>
-        <!-- CSS -->
-        <link href="{{ url_for('static', filename='style.css')}}" rel="stylesheet" type="text/css">
+    <!-- 반응형으로 동작 -->
+    <meta title="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <!-- Bulma -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
-        <!-- 텍스트형태로 되어있는 icon 을 쓸 수 있도록 Font awesome 을 포함 -->
-        <script defer src="https://use.fontawesome.com/releases/v6.4.0/js/all.js"></script>
+    <!-- jQuery latest version import -->
+    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
 
-        <title>Paper Please</title>
+    <!-- JS -->
+    <script src="{{ url_for('static', filename='script.js')}}" type="text/javascript"></script>
+    <!-- CSS -->
+    <link href="{{ url_for('static', filename='style.css')}}" rel="stylesheet" type="text/css">
 
-    </head>
+    <!-- Bulma -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 
-    <body>
-        <!-- 제목 부분 -->
-        <section class="hero is-warning">
-            <div class="hero-body">
-                <div class="container center">
-                    <h1 class="title">
-                        Paper Please😆
-                    </h1>
-                    <h2 class="subtitle">
-                        Search Research Papers with LangChain
-                    </h2>
+    <!-- 텍스트형태로 되어있는 icon 을 쓸 수 있도록 Font awesome 을 포함 -->
+    <script defer src="https://use.fontawesome.com/releases/v6.4.0/js/all.js"></script>
+
+    <title>Paper Please</title>
+
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Pretendard:wght@400;500;700&display=swap" rel="stylesheet">
+
+</head>
+
+<body class="bg-white text-gray-800">
+
+    <!-- 제목 부분 -->
+    <section class="hero is-warning">
+        <div class="hero-body">
+            <div class="container center">
+                <h1 class="title text-3xl font-bold mb-6">
+                    Paper Please😆
+                </h1>
+                <h2 class="subtitle">
+                    Search Research Papers with LangChain
+                </h2>
+            </div>
+        </div>
+    </section>
+
+
+
+    <div class="container mx-auto p-4">
+
+        <div class="mb-4">
+            <!-- ChatModel 선택 -->
+            <input type="radio" id="tab1" name="tab" class="tab" checked>
+            <label for="tab1" class="inline-block px-4 py-2 cursor-pointer">GPT4</label>
+            <input type="radio" id="tab2" name="tab" class="tab">
+            <label for="tab2" class="inline-block px-4 py-2 cursor-pointer">GPT3.5</label>
+            <input type="radio" id="tab3" name="tab" class="tab">
+            <label for="tab3" class="inline-block px-4 py-2 cursor-pointer">Cohere</label>
+            <!-- AI 응답 지우기 -->
+            <button class="px-4 py-2 bg-red-500 text-white rounded hover:bg-red-600" onclick="clearAnswers()">Output
+                Clear</button>
+            <!-- PDF 업로드 -->
+            <form action = "/upload" method = "POST" enctype = "multipart/form-data">
+                <input type = "file" name = "file" accept=".pdf" >
+                <button class="btn btn-primary" type="submit">PDF 제출하기</button>
+            </form> 
+
+        </div>
+
+        <!-- AI 응답 내용 출력 -->
+        <div class="content bg-gray-100 p-4 mb-4">
+            <div class="mb-4">
+                <label class="block mb-2 text-lg">New Chat</label>
+                <div class="space-y-2" id="queryOutput">
+                    <!-- 동적 삽입 -->
                 </div>
             </div>
-        </section>
-
-        <div id="queryOutput" class="container-fluid position-relative d-flex flex-column bd-highlight mb-3 p-2" style="height: 85vh; overflow: auto;">
-            <!-- AI 응답 내용 출력 -->
         </div>
 
+    </div>
 
-        <div class="input-group fixed-bottom mb-3 inputfield">
-            <input id="queryInput" type="text" class="form-control" placeholder="Paper Please에게 어떤 논문이든 물어보세요." aria-label="Paper Please에게 어떤 논문이든 물어보세요." aria-describedby="basic-addon2">
-            <button type="button" class="input-group-text submitBtn" id="submitButton" onclick="question()">
-                <i class="fa-solid fa-location-arrow submitIcon"></i>
-            </button>
-        </div>
+    <div class="input-group fixed-bottom mb-3 inputfield">
+        <input id="queryInput" type="text" class="form-control" placeholder="Paper Please에게 어떤 논문이든 물어보세요."
+            aria-label="Paper Please에게 어떤 논문이든 물어보세요." aria-describedby="basic-addon2">
+        <button type="button" class="input-group-text submitBtn" id="submitButton" onclick="question()">
+            <i class="fa-solid fa-location-arrow submitIcon"></i>
+        </button>
+    </div>
 
-        
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    </body>
+</body>
+
 </html>
