--- a/static/style.css
+++ b/static/style.css
@@ -24,3 +24,9 @@
     border-radius: 10px;
     margin-bottom: 10px;
 }
+.chat-bubble2 {
+    background-color: #dfdfdf;
+    padding: 10px;
+    border-radius: 10px;
+    margin-bottom: 10px;
+}
