--- a/templates/index.html
+++ b/templates/index.html
@@ -61,13 +61,13 @@
             <div class="col-md-8">
                 <div class="d-flex justify-content-between">
                     <div>
-                        <button type="button" class="btn btn-outline-secondary px-4 py-2 model-btn" id="btn-tab1"
+                        <button type="button" class="btn btn-outline-secondary px-4 py-2 model-btn" id="GPT4"
                             onclick="onClickLLMButton(this.innerText)">GPT4
                         </button>
-                        <button type="button" class="btn btn-outline-secondary px-4 py-2 model-btn" id="btn-tab2"
+                        <button type="button" class="btn btn-secondary px-4 py-2 model-btn" id="GPT3.5"
                             onclick="onClickLLMButton(this.innerText)">GPT3.5
                         </button>
-                        <button type="button" class="btn btn-outline-secondary px-4 py-2 model-btn" id="btn-tab3"
+                        <button type="button" class="btn btn-outline-secondary px-4 py-2 model-btn" id="Cohere"
                             onclick="onClickLLMButton(this.innerText)">Cohere
                         </button>
                     </div>
